small changes to pom.xml. - added lombok support - ran the tests locally working fine.